--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,13 @@
 					</excludes>
 				</configuration> -->
 			</plugin>
+			 <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.19.1</version>
+        </plugin>
+  </plugins>
 		</plugins>
 	</build>
 
